--- a/index.html
+++ b/index.html
@@ -15,60 +15,34 @@
     <title>Frontend Mentor | Blog preview card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
-
-      body {
-        background-color: hsl(47, 88%, 63%);
-      }
-
-      .my-card {
-        background-color: hsl(0, 0%, 100%);
-        color: Black: hsl(0, 0%, 7%);
-      }
-
-      button {
-        background-color: hsl(47, 88%, 63%);
-      }
-
-      .blog-description {
-        color: hsl(0, 0%, 50%);
-      }
-
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <section>
         <div class="my-card">
+          <img
+            src="./assets/images/illustration-article.svg"
+            alt="blog header image"
+          />
+
           <button>Learning</button>
 
-          <p>Published 21 Dec 2023</p>
+          <p class="inside-text">Published 21 Dec 2023</p>
 
-          <h1>HTML & CSS foundations</h1>
+          <h1 class="inside-text">HTML & CSS foundations</h1>
 
-          <p class="blog-description">
+          <p class="blog-description inside-text">
             These languages are the backbone of every website, defining
             structure, content, and presentation.
           </p>
 
-          <h2>Greg Hooper</h2>
+          <section class="author">
+            <img src="./assets/images/image-avatar.webp" alt="Greg Hooper" />
+            <h2>Greg Hooper</h2>
+          </section>
         </div>
       </section>
     </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
   </body>
 </html>
