Fix spacing, font and line height

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <button>Learning</button>
 
-          <p class="inside-text">Published 21 Dec 2023</p>
+          <p class="publish-date inside-text">Published 21 Dec 2023</p>
 
           <h1 class="inside-text">HTML & CSS foundations</h1>
 
